<resources>
    <string name="app_name">ByYourSide</string>
    <string name="nombre_app_titulo">By Your Side</string>
    <string name="que_eres">¿Que Eres?</string>
    <string name="comercio">COMERCIO\n</string>
    <string name="cliente">CLIENTE</string>
    <string name="hint_email_comercio">frutipan@gmail.com</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="crear_cuenta">Crear una Cuenta</string>
    <string name="pregunta_registro">¿Aún no tienes una cuenta?</string>
    <string name="pregunta_registro_comercio">¿Aún no tienes una cuenta para tu comecio?</string>
    <string name="hint_nombre_comercio">Nombre del Comercio</string>
    <string name="hint_nif_comercio">NIF del Comercio</string>
    <string name="calle">Avenida, Calle</string>
    <string name="hint_telefono">Nº de Teléfono</string>
    <string name="hint_registro_comercio">Registrar Comercio</string>
    <string name="web">Web del Comercio</string>
    <string name="hint_nombre_cliente">Nombre</string>
    <string name="hint_apellidos_cliente">Apellidos</string>
    <string name="hint_registro_cliente">Registrarse</string>
    <string name="hint_direccion_cliente">Dirección</string>
    <string name="hint_lote">Lote</string>
    <string name="hint_pais">País</string>
    <string name="hint_nombre_producto">Producto</string>
    <string name="hint_marca">Marca</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_fecha_caducidad">Caducidad DD-MM-YYYY</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="consultar_inventario">Consultar Inventario</string>
    <string name="buscar_producto">Buscar Producto</string>
    <string name="hint_email_cliente">ejem27@gmail.com</string>
    <string name="descrip_btn_volver">Botón para vovler atrás</string>
    <string name="busqueda">Búsqueda</string>

    <string name="volver">Volver</string>
    <string name="decrip_btn_comoLlegar">Botón para abrir mapa con la dirección del comercio</string>
    <string name="decrip_btn_urlComercio">Botón para ir a la web del comercio</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="numero_local">Nº del local</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="e_comerce">¿Eres un e-comerce?</string>
    <string name="hint_confirmar_password">Confirmar Contraseña</string>
    <string name="id_producto">ID del producto</string>


    <string name="inventario_titulo">Inventario</string>
    <string name="nombre_comercio">Nombre Comercio</string>
    <string name="id_comercio">ID Comercio</string>
    <string name="id_producto_inv">ID Producto:</string>
    <string name="id_producto_inv_ej">V-12345</string>
    <string name="lote_producto_inv">Lote:</string>
    <string name="lote_producto_inv_ej">L-12345678</string>
    <string name="pais_origen_inv">País Origen:</string>
    <string name="pais_origen_inv_ej">Pais Origen</string>
    <string name="nombre_producto_inv_ej">Harina Pan</string>
    <string name="nombre_producto_inv">Nombre:</string>
    <string name="marca_producto_inv">Marca:</string>
    <string name="marca_producto_inv_ej">Polar</string>
    <string name="precio_producto_inv">Precio:</string>
    <string name="precio_producto_inv_ej">10.99€</string>
    <string name="modificar_producto">Editar Producto</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="decrip_btn_modificarPrecio">Botón para modificar el precio del producto</string>
    <string name="decrip_btn_eliminarProducto">Botón para eliminar el producto</string>
    <string name="no_hay_inventario_inv">No hay productos en el inventario</string>

    <string name="resultados_busqueda">Catálogo</string>
    <string name="nombre_comercio_rb">Nombre Comercio:</string>
    <string name="nombre_comercio_rbv_ej">Frutipan</string>
    <string name="nombre_producto_rb">Producto:</string>
    <string name="nombre_producto_rbv_ej">Producto X</string>
    <string name="marca_producto_rb">Marca:</string>
    <string name="marca_producto_rbv_ej">Marca Y</string>
    <string name="pais_origen_producto_rb"> País origen:</string>
    <string name="pais_origen_producto_rbv_ej">Pais Origen</string>
    <string name="precio_producto_rb">Precio:</string>
    <string name="precio_producto_rbv_ej">10.99€</string>
    <string name="direccion_comercio_rb">Dirección:</string>
    <string name="direccion_comercio_rbv_ej">Calle 123, Ciudad</string>
    <string name="url_comercio_rb">Web:</string>
    <string name="url_comercio_rbv_ej">www.tienda.com</string>
    <string name="como_llegar">Cómo llegar</string>
    <string name="ir_web">Ir a la web</string>
    <string name="no_hay_resultados_rb">No se encontraron resultados</string>
    <string name="que_quieres_hacer">¿Que quieres hacer?</string>
    <string name="ir_a_agregar_producto">Agregar un producto</string>
    <string name="ir_consultar_inventario">Ir al inventario</string>
    <string name="login_comercio">Login Comercio</string>
    <string name="volver_atras">Volver al Inicio</string>
    <string name="login_title">By Your Side</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="crea_tu_cuenta">Crea tu Cuenta</string>
    <string name="provincia">Provincia</string>
    <string name="municipio">Municipio</string>
    <string name="login_email_comercio">Inicio con Google</string>
    <string name="login_email_cliente">Inicio con Google</string>
    <string name="pregunta_rc">¿Has olvidado la contraseña?</string>
    <string name="texto_recuperacion_comercio">Ingresa el correo de tu comercio o usuario para enviarte un enlace de recuperación.</string>
    <string name="titulo_cd_recuperacion">Recuperar Contraseña</string>
    <string name="hint_email_rc">ejemplo@gmail.com</string>
    <string name="seleccionar_imagen">Subir imagen</string>
    <string name="hint_id_producto">ID del Producto (Editable)</string>
    <string name="pais_origen_edit">País de origen del producto</string>
    <string name="hint_nombre_producto_edit">Nombre del producto</string>
    <string name="fecha_caducidad">DD/MM/YYYY</string>
    <string name="eliminar_foto">Eliminar Foto</string>


</resources>