<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Contenedor de información (izquierda) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/nombre_comercio_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_comercio_rb"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/nombre_comercio_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/nombre_comercio_rbv_ej"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>


            <!-- Nombre del producto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/nombre_producto_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_producto_rb"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/nombre_producto_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/nombre_producto_rbv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- Marca del producto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/marca_producto_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca_producto_rb"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/marca_producto_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/marca_producto_rbv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/pais_origen_producto_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pais_origen_producto_rb"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/pais_origen_producto_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pais_origen_producto_rbv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- Precio del producto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/precio_producto_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_producto_rb"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/precio_producto_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/precio_producto_rbv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- Dirección del comercio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/direccion_comercio_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion_comercio_rb"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/direccion_comercio_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/direccion_comercio_rbv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <!-- URL del comercio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/url_comercio_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/url_comercio_rb"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/url_comercio_rbv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/url_comercio_rbv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/btn_como_llegar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/coral"
                android:contentDescription="@string/decrip_btn_comoLlegar"
                android:drawableLeft="@drawable/como_llegar"
                android:drawablePadding="4dp"
                android:paddingLeft="4dp"
                android:text="@string/como_llegar"
                android:textSize="15sp"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/btn_ir_web"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="17dp"
                android:backgroundTint="@color/coral"
                android:contentDescription="@string/decrip_btn_urlComercio"
                android:drawableLeft="@drawable/ir_web"
                android:drawablePadding="4dp"
                android:paddingLeft="4dp"
                android:text="@string/ir_web"
                android:textSize="15sp"
                android:textColor="@color/white"/>



        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>