<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Contenedor de información -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tv_id_producto_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_producto_inv"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_id_producto_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/id_producto_inv_ej"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>


            <!-- Nombre del producto -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_lote_producto_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lote_producto_inv"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_lote_producto_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/lote_producto_inv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>


            <!-- País de origen -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_pais_origen_producto_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pais_origen_inv"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_pais_origen_producto_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pais_origen_inv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_nombre_producto_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_producto_inv"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_nombre_producto_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/nombre_producto_inv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_marca_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marca_producto_inv"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_marca_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/marca_producto_inv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/tv_precio_producto_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_producto_inv"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_precio_producto_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/precio_producto_inv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fecha_caducidad_i"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_caducidad_inv"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tv_fecha_caducidad_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/fecha_caducidad_inv_ej"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>


        <!-- Contenedor de botones debajo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/btn_modificar_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="17dp"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:text="@string/modificar_producto"
                android:backgroundTint="@color/coral"
                android:contentDescription="@string/decrip_btn_modificarPrecio"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_eliminar_producto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="17dp"
                android:textSize="15sp"
                android:text="@string/eliminar_producto"
                android:backgroundTint="@color/coral"
                android:contentDescription="@string/decrip_btn_eliminarProducto"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
