<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroCliente">


    <LinearLayout
        android:id="@+id/layout_top_registro_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/volver_login_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:background="@color/coral"
            android:contentDescription="@string/volver_atras"
            android:padding="10dp"
            android:src="@drawable/flecha_volver"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/coral"
            android:gravity="center"
            android:paddingLeft="-45dp"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_registro_cliente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/fondo_by_your_side"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_top_registro_cliente">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_login_cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="-10dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="30dp"
            app:cardElevation="90dp">

            <LinearLayout
                android:id="@+id/linear_layout_cd_login_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/crea_tu_cuenta"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/et_nombre_cliente_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="10"
                    android:hint="@string/hint_nombre_cliente"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/et_apellido_cliente_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="10"
                    android:hint="@string/hint_apellidos_cliente"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


                <EditText
                    android:id="@+id/et_telefono_cliente_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="10"
                    android:hint="@string/hint_telefono"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/et_email_cliente_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:drawableLeft="@drawable/person_asset"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/hint_email_cliente"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/et_contrasenha_cliente_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:drawableLeft="@drawable/lock_asset"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/et_confirmar_contrasenha_cliente_registro"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/custom_edit_text"
                    android:drawableLeft="@drawable/lock_asset"
                    android:drawablePadding="4dp"
                    android:ems="10"
                    android:hint="@string/hint_confirmar_password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/black"
                    android:textSize="25sp" />


                <Button
                    android:id="@+id/btn_registro_cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/coral"
                    android:text="@string/hint_registro_cliente"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>